<?xml version="1.0" encoding="utf-8"?>
<!--채팅방 만들기 화면-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.MainActivity">

    <!--메뉴바-->
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--메뉴바 제목-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tool_title"
            android:textSize="16sp" />

    </Toolbar>

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/grey"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp" />


    <!--채팅방 만들기 관련 정보들-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <!--제목-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp" />

        <!--제목 입력 창-->
        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/border_background"
            android:hint="@string/title_text"
            android:textSize="12sp"
            android:textColorHint="@color/grey_text"/>

        <!--카테고리-->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/category_text"
            android:textSize="16sp" />

        <!--카테고리 선택 창-->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_custom" />

        <!--내용-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/main_text"
            android:textSize="16sp" />

        <!--내용 입력 창-->
        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:background="@drawable/border_background"
            android:hint="@string/main_detail_text"
            android:textSize="12sp"
            android:textColorHint="@color/grey_text"
            android:gravity="top"
            android:scrollHorizontally="false"
            android:paddingRight="30dp"/>

        <!--사진 첨부-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pic_attach"
            android:textSize="16sp" />

        <!--사진 첨부 버튼 (image.xml)-->
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/border_background"
            android:paddingRight="16dp"
            android:contentDescription="image"
            app:srcCompat="@drawable/image" />

        <!--사진 첨부 수-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pic_attach_text"
            android:paddingLeft="14dp"/>

    </LinearLayout>

    <!--채팅방 입장하기 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="@color/green"
        android:text="@string/enter_chat"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>