<?xml version="1.0" encoding="utf-8"?>
<!--채팅방 화면-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!--채팅방-->
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--채팅방-->
        <TextView
            android:id="@+id/chatroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="채팅방"
            android:textSize="16sp" />

    </Toolbar>

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/grey"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp" />

    <!--공지바-->
    <View
        android:id="@+id/noticeBar"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.049" />

    <!--공지 아이콘 (notice.xml)-->
    <ImageView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/noticeBar"
        app:layout_constraintStart_toStartOf="@+id/noticeBar"
        app:layout_constraintTop_toTopOf="@+id/noticeBar"
        app:srcCompat="@drawable/notice" />

    <!--공지-->
    <TextView
        android:id="@+id/notice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/notice"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/noticeBar"
        app:layout_constraintStart_toEndOf="@+id/notice"
        app:layout_constraintTop_toTopOf="@+id/noticeBar" />

    <!--예금주-->
    <TextView
        android:id="@+id/account_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/account_holder"
        android:textSize="12sp"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toBottomOf="@+id/noticeBar"
        app:layout_constraintStart_toEndOf="@+id/notice_text"
        app:layout_constraintTop_toTopOf="@+id/noticeBar" />

    <!--계좌번호-->
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/account"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/noticeBar"
        app:layout_constraintStart_toEndOf="@+id/account_holder"
        app:layout_constraintTop_toTopOf="@+id/noticeBar" />

    <!--날짜-->
    <TextView
        android:id="@+id/chat_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeBar" />

    <!--안내문구-->
    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sub_text"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_date" />

    <!--채팅 내용-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_text" />

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/chatting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!--더보기 버튼 (plus.xml)-->
    <ImageButton
        android:id="@+id/plusButton"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:contentDescription="plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/plus" />

    <!--메세지 작성란-->
    <EditText
        android:id="@+id/chatting"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/border_background"
        android:ems="10"
        android:hint="@string/chatting"
        android:inputType="text"
        android:textColorHint="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintStart_toEndOf="@+id/plusButton" />

    <!--전송 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>