<?xml version="1.0" encoding="utf-8"?>
<!--글 선택 -> 팝업창 (이미지 첨부 버전)-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="372dp"
    android:layout_height="312dp"
    android:layout_gravity="center">

    <!--게시한 시간과 날짜-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/day_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--게시 시간-->
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--게시 날짜-->
        <TextView
            android:id="@+id/write_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/write_date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--제목-->
    <TextView
        android:id="@+id/chat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chat_title2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_date" />

    <View
        android:id="@+id/line"
        android:layout_width="372dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_title" />


    <!--내용-->
    <TextView
        android:id="@+id/chat_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/chat_context2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_bias="0.007" />

    <!--첨부 이미지 확인-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageLine"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/iconBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_context">


        <!--샘플 이미지_1-->
        <ImageView
            android:id="@+id/example_image"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/example_image" />

        <!--샘플 이미지_2-->
        <ImageView
            android:id="@+id/example_image2"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/example_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/example_image2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--아이콘 확인-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iconBar"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chat_context"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <!--채팅 아이콘 (chat.xml)-->
        <ImageView
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chat" />

        <!--채팅방 인원수-->
        <TextView
            android:id="@+id/chat_person"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/chat_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_image"
            app:layout_constraintStart_toEndOf="@+id/chat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!--뷰 아이콘 (view.xml)-->
        <ImageView
            android:id="@+id/view_image"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:padding="2dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView12"
            app:layout_constraintStart_toEndOf="@+id/chat_person"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/view" />

        <!--뷰 수-->
        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:text="@string/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--채팅방 입장하기 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_chat"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="232dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/enter_chat"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!--닫기 버튼-->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:contentDescription="closeButton"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/day_date"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

</androidx.constraintlayout.widget.ConstraintLayout>